Positionnement des tours ✔️
Possibilité de jouer ✔️
Déplacement des ennemis ✔️
Réinitialisation du jeu à la sortie ⚠️Les tours sont encore présentes, mais pour le reste ✔️

Quelques tests encore en échec ✖️

Il faut confirmer les capacités de génération des fichiers json de TD-Editor et TD-Progression 😒
